--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="essai.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/c838d79e10.js" crossorigin="anonymous"></script>
-  <meta name="description" content="CV d'un developpeur web">
+  <meta name="description" content="page d'index pour le CV d'un developpeur web">
   <title>Kevin ROSSIGNOL - Mon CV</title>
 </head>
 
