--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE HTML>
 <!DOCTYPE html>
 <html lang="fr">
     <head>
@@ -11,8 +10,7 @@
         <meta name="description" content="page d'index pour le CV d'un developpeur web">
         <title>Kevin ROSSIGNOL - Mon CV</title>
     </head>
-
-    <body>
+     <body>
         <section class="site">
             <div class="image">
                 <img src="profil.jpg"  alt="photo de moi">
@@ -20,7 +18,7 @@
             <header class="header">
                 <div class="grandtitre">
                     <h1><span class="prenom">Kévin</span> ROSSIGNOL</h1>
-                    <h1><span class="metier">Dévelo</span>ppeur Web</h1>
+                    <strong><span class="metier">Dévelo</span>ppeur Web</strong>
                 </div>
             </header>
             <section class="sidebar">
