--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
                 </article>
                 <article id="loisir">
                     <h3>LOISIRS</h3>
-                    <div class="kiffe">
-                        <i class="fas fa-futbol fa-3x" title="Ceci est un ballon de foot"></i>
-                        <i class="fas fa-snowboarding fa-3x" title="Pas du snowboard du surf !"></i>
-                        <i class="fas fa-pizza-slice fa-3x" title="Bon après j'aime aussi les burgers, les pâtes, les sushis..."></i>
-                    </div>
+                        <div class="flex">
+                        <div class="ico"><i class="fas fa-futbol fa-3x" title="Ceci est un ballon de foot"></i></div>
+                        <div class="ico"><i class="fas fa-snowboarding fa-3x" title="Pas du snowboard du surf !"></i></div>
+                        <div class="ico"><i class="fas fa-pizza-slice fa-3x" title="Bon après j'aime aussi les burgers, les pâtes, les sushis..."></i></div>
+                        </div>
                 </article>
             </section>
             <section class="wrapper">
