--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <header class="header">
                 <div class="grandtitre">
                     <h1><span class="prenom">Kévin</span> ROSSIGNOL</h1>
-                    <strong><span class="metier">Dévelo</span>ppeur Web</strong>
+                    <h2><span class="metier">Dévelo</span>ppeur Web</h2>
                 </div>
             </header>
             <section class="sidebar">
